--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 
 
         <p class="view"><a href="https://github.com/ameasure">View My GitHub Profile</a></p>
-
+        <ul>
+          {% for post in site.posts %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
       </header>
       <section>
         <h3>
